--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.1.6",
     "axios": "^1.2.6",
-    "bootstrap": "^5.2.2",
+    "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.3.1",
     "dayjs": "^1.11.7",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
+    "react-webcam": "^7.1.1",
     "universal-cookie": "^4.0.4",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
