--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.1",
     "dayjs": "^1.11.7",
+    "katex": "^0.16.8",
+    "rc-virtual-list": "^3.10.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
     "react-webcam": "^7.1.1",
+    "redux": "^4.2.1",
+    "rehype-rewrite": "^3.0.6",
+    "socket.io-client": "^4.7.2",
     "universal-cookie": "^4.0.4",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
