--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@uiw/react-md-editor": "^3.23.5",
-    "antd": "^5.1.6",
+    "antd": "^5.9.0",
     "axios": "^1.2.6",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.1",
     "dayjs": "^1.11.7",
     "katex": "^0.16.8",
+    "net": "^1.0.2",
     "rc-virtual-list": "^3.10.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
@@ -25,6 +27,8 @@
     "redux": "^4.2.1",
     "rehype-rewrite": "^3.0.6",
     "socket.io-client": "^4.7.2",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "universal-cookie": "^4.0.4",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
